--- a/vsl.html
+++ b/vsl.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Best 1</title>
+</head>
+<body>
 
+<h1 style="font-family: 'Tahoma', sans-serif; font-style: normal; font-weight: 700; font-size: 36px; line-height: 43px; color: #f0f4f8; background-color: black; text-align: center;">Boost Editor is an AI powered Unicode Text Editor that lets you easily create your social media content and format the text, add fancy fonts and a whole lot more!</h1>
+
+</body>
+</html>
